--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,13 +1,77 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
-    {% load crispy_forms_filters %}
-    {% load crispy_forms_tags %}
-    <div class="container">
-        <h2>Log In</h2>
-        <form method="post">
-            {% csrf_token %} {{ form|crispy }}
-            <button class="btn btn-dark" type="submit">Register</button>
-            {% if error %}<p class="error">{{ error }}</p>{% endif %}
-        </form>
+    <!-- centralized container -->
+    <div class="container mt-8 py-12 mx-auto md:w-1/3 md:bg-gray-100 rounded-xl">
+        <!-- Social Logins Section -->
+        <div class="flex flex-col items-center justify-cente p-4">
+            <h1 class="text-3xl font-bold text-gray-600 mt-4">Registrate</h1>
+            <!-- Social Logins container -->
+            <div class="flex flex-row justify-center items-center space-x-4 mt-4">
+                <!-- Google Card -->
+                <div class="flex flex-col items-center justify-center bg-white rounded-xl shadow-xl p-4">
+                    <a href="#" class="flex flex-row justify-center items-center space-x-2">
+                        <img src="{% static 'img/google.png' %}" alt="google logo" class="w-8 h-8"/>
+                        <h1 class="text-xl font-bold text-gray-600">Google</h1>
+                    </a>
+                </div>
+                <!-- Facebook Card -->
+                <div class="flex flex-col items-center justify-center bg-white rounded-xl shadow-xl p-4">
+                    <a href="#" class="flex flex-row justify-center items-center space-x-2">
+                        <img src="{% static 'img/facebook.png' %}"
+                             alt="facebook logo"
+                             class="w-8 h-8"/>
+                        <h1 class="text-xl font-bold text-gray-600">Facebook</h1>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <!-- Login with email -->
+        <div class="flex flex-col items-center justify-center  p-4>
+            <h1 class="text-3xl font-bold text-gray-600 mt-4">O registrate con tu email</h1>
+            <!-- Login form -->
+            <form action="{% url 'accounts:register' %}"
+                  method="POST"
+                  class="flex flex-col items-center justify-center space-y-4 mt-4">
+                {% csrf_token %}
+                <div class="flex flex-col items-center justify-center space-y-2">
+                    <label for="username" class="text-xl font-bold text-gray-600">Usuario</label>
+                    <input type="username"
+                           name="username"
+                           id="username"
+                           class="w-96 h-10 rounded-xl border-2 border-gray-300 focus:border-indigo-600 focus:outline-none px-4"/>
+                </div>
+                <div class="flex flex-col items-center justify-center space-y-2">
+                    <label for="password" class="text-xl font-bold text-gray-600">Contraseña</label>
+                    <input type="password"
+                           name="password"
+                           id="password"
+                           class="w-96 h-10 rounded-xl border-2 border-gray-300 focus:border-indigo-600 focus:outline-none px-4"/>
+                </div>
+                <div class="flex flex-col items-center justify-center space-y-2">
+                    <label for="password" class="text-xl font-bold text-gray-600">Confirmar contraseña</label>
+                    <input type="password"
+                           name="password_confirm"
+                           id="password_confirm"
+                           class="w-96 h-10 rounded-xl border-2 border-gray-300 focus:border-indigo-600 focus:outline-none px-4"/>
+                </div>
+                <div class="flex flex-col items-center justify-center space-y-2">
+                    <input type="submit"
+                           value="Registrarse"
+                           class="w-96 h-10 rounded-xl bg-indigo-600 text-white font-bold text-xl"/>
+                </div>
+                <!-- Error Message -->
+                {% if form.errors %}
+                    <div class="flex flex-col items-center justify-center space-y-2">
+                        <h1 class="text-xl font-bold text-red-600">Error</h1>
+                        <ul class="flex flex-col items-center justify-center space-y-2">
+                            {% for field in form %}
+                                {% for error in field.errors %}<li class="text-red-600">{{ error }}</li>{% endfor %}
+                            {% endfor %}
+                        </ul>
+                    </div>
+                {% endif %}
+            </form>
+        </div>
     </div>
 {% endblock %}
