tailwinds design implementation

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     </head>
     <body class="flex flex-col min-h-screen">
         {% include 'navbar.html' %}
-        <div class="controls container">
+        <div class="controls">
             {% block controls %}{% endblock %}
         </div>
         <div class="content">
