--- a/professors/templates/controls/professor_list_controls.html
+++ b/professors/templates/controls/professor_list_controls.html
@@ -1,39 +1,51 @@
-<div class="d-flex container">
-    <div class="filters d-flex">
-        <div class="dropdown">
-            <select name="college" id="college_filter" class="btn btn-primary">
-                <option value="" disabled selected hidden>
-                    Recinto
-                </option>
-                {% for univesity in universities %}
-                    <option value="{{ univesity }}">
-                        {{ univesity }}
-                    </option>
-                {% endfor %}
+<!-- Centered Section with 3 divs, one for two select buttons, one in the middle for a search bar, and another one with a link for adding new professors -->
+<section class="flex flex-col md:flex-row bg-gray-100 rounded-md mx-auto md:justify-center md:items-center md:space-x-4 md:p-6 my-8">
+    <!-- Two selects, for college and faculty -->
+    <div class="flex flex-col md:flex-row md:justify-center md:items-center md:space-x-4">
+        <div class="flex flex-col md:justify-center md:items-center md:space-x-4">
+            <label for="college" class="text-gray-700 font-bold">Universidad</label>
+            <select name="college" id="college" class="border border-gray-300 rounded-md p-2">
+                <option value="upr">Universidad de Puerto Rico</option>
+                <option value="uprm">Universidad de Puerto Rico en Mayagüez</option>
+                <option value="uprrp">Universidad de Puerto Rico en Río Piedras</option>
+                <option value="uprhumacao">Universidad de Puerto Rico en Humacao</option>
+                <option value="uprcarolina">Universidad de Puerto Rico en Carolina</option>
+                <option value="uprrecinto">Universidad de Puerto Rico en Recinto de Mayagüez</option>
+                <option value="uprrecinto">Universidad de Puerto Rico en Recinto de Ponce</option>
+                <option value="uprrecinto">Universidad de Puerto Rico en Recinto de Arecibo</option>
+                <option value="uprrecinto">Universidad de Puerto Rico en Recinto de Cayey</option>
+                <option value="uprrecinto">Universidad de Puerto Rico en Recinto de Utuado</option>
+                <option value="uprrecinto">Universidad de Puerto Rico en Recinto de Ponce</option>
+                <option value="uprrecinto">Universidad de Puerto Rico en Recinto de Aguadilla</option>
+                <option value="uprrecinto">Universidad de Puerto Rico en Recinto de Manatí</option>
+                <option value="uprrecinto">Universidad de Puerto Rico en Recinto de Bayamón</option>
             </select>
         </div>
-        <div class="dropdown">
-            <select name="department" id="faculty_filter" class="btn btn-primary">
-                <option value="" disabled selected hidden>
-                    Facultad
-                </option>
-                {% for department in departments %}
-                    <option value="{{ department }}">
-                        {{ department }}
-                    </option>
-                {% endfor %}
+        <div class="flex flex-col md:justify-center md:items-center md:space-x-4">
+            <label for="faculty" class="text-gray-700 font-bold">Facultad</label>
+            <select name="faculty" id="faculty" class="border border-gray-300 rounded-md p-2">
+                <option value="ciencias">Ciencias</option>
+                <option value="derecho">Derecho</option>
+                <option value="educacion">Educación</option>
+                <option value="humanidades">Humanidades</option>
+                <option value="ingenieria">Ingeniería</option>
+                <option value="medicina">Medicina</option>
+                <option value="nursing">Nursing</option>
+                <option value="psicologia">Psicología</option>
+                <option value="salud">Salud</option>
             </select>
         </div>
     </div>
-    <form class="d-flex">
-        <input class="form-control me-2 search-bar"
-               type="search"
-               id="search-bar"
-               placeholder="Search"
-               aria-label="Search"/>
-        <button class="btn btn-primary" type="submit">Search</button>
-    </form>
-    <a href="{% url 'professors:create_professor' %}">
-        <button class="btn btn-primary">Add Professor</button>
-    </a>
-</div>
+    <!-- Search bar -->
+    <div class="flex flex-col md:justify-center md:items-center md:space-x-4">
+        <label for="search" class="text-gray-700 font-bold">Buscar</label>
+        <div>
+            <input type="text" name="search" id="search" class="border border-gray-300 rounded-md p-2">
+        </div>
+    </div>
+    <!-- Link to add new professors -->
+    <div class="flex flex-col md:justify-center md:items-center md:space-x-4">
+        <label for="add" class="text-gray-700 font-bold">👨‍🏫</label>
+        <a href="/professors/add" class="bg-indigo-600 py-2 px-4 rounded-md text-white font-bold">+ profesor</a>
+    </div>
+</section>
