--- a/professors/templates/professor_list.html
+++ b/professors/templates/professor_list.html
@@ -1,39 +1,35 @@
 {% extends 'base.html' %}
 {% block head %}
     {% load static %}
-    {% block title %}<title>Professors</title>{% endblock %}
     <link rel="stylesheet" href="{% static 'css/professors.css' %}" />
 {% endblock %}
 {% block controls %}
     {% include 'controls/professor_list_controls.html' %}
 {% endblock %}
 {% block content %}
-    <div class="container">
-        <h1 class="text-center">Listado de Profesores</h1>
-        <div class="professors">
-            {% for object in object_list %}
-                <div class="container professor"
-                     data-college="{{ object.college }}"
-                     data-faculty="{{ object.faculty }}"
-                     data-name="{{ object.first_name }} {{ object.last_name }}">
-                    <a href="{{ object.pk }}" class="card-link">
-                        <div class="card">
-                            <div class="card-header card-title">{{ object.first_name }} {{ object.last_name }}</div>
-                            <div class="card-body">
-                                <h5>Universidad</h5>
-                                <p class="card-text">
-                                    <span class="college">Campus: {{ object.college }}</span>
-                                    <br />
-                                    <span class="faculty">Facultad: {{ object.faculty }}</span>
-                                </p>
+    <!-- Professor List Section -->
+    <section>
+        <!-- Section title -->
+        <h1 class="text-3xl font-bold text-gray-900 text-center my-2">Lista de Profesores</h1>
+        <div class="container flex flex-col md:flex-row md:flex-wrap md:mx-auto md:items-center">
+            <!-- Section title -->
+            {% for professor in professors %}
+                    <div class="flex flex-col md:w-3/12 rounded-lg p-6 m-4 shadow-md border border-gray-200 md:hover:bg-gray-200 md:hover:animate-bounce">
+                        <a href="" class="space-y-2">
+                            <!-- header -->
+                            <div class="flex flex-row space-x-1 items-center md:text-2xl">
+                                <p class="font-bold text-gray-900">{{ professor.first_name }} {{ professor.last_name }}</p>
+                                <img src="{% static 'img/upr_logo.jpg' %}" alt="" class="w-5 h-5 rounded-full">
                             </div>
-                        </div>
-                    </a>
-                </div>
-            {% empty %}
-                <li>No objects yet.</li>
+                            <!-- diving line -->
+                            <!-- body -->
+                            <div class="flex flex-col justify-start items-start md:text-md">
+                                <p><span class="font-bold text-gray-700">Universidad: </span> <span class="text-gray-600">{{ professor.college }}</span></p>
+                                <p><span class="font-bold text-gray-700">Facultad: </span> <span class="text-gray-600">{{ professor.faculty }}</span></p>
+                            </div>
+                        </a>
+                    </div>
             {% endfor %}
         </div>
-    </div>
-    <script src="{% static 'js/filter.js' %}"></script>
+    </section>
 {% endblock %}
