--- a/professors/templates/controls/professor_list_controls.html
+++ b/professors/templates/controls/professor_list_controls.html
@@ -4,35 +4,88 @@
     <div class="flex flex-col md:flex-row md:justify-center md:items-center md:space-x-4">
         <div class="flex flex-col md:justify-center md:items-center md:space-x-4">
             <label for="college" class="text-gray-700 font-bold">Universidad</label>
-            <select name="college" id="college" class="border border-gray-300 rounded-md p-2">
-                <option value="upr">Universidad de Puerto Rico</option>
-                <option value="uprm">Universidad de Puerto Rico en Mayagüez</option>
-                <option value="uprrp">Universidad de Puerto Rico en Río Piedras</option>
-                <option value="uprhumacao">Universidad de Puerto Rico en Humacao</option>
-                <option value="uprcarolina">Universidad de Puerto Rico en Carolina</option>
-                <option value="uprrecinto">Universidad de Puerto Rico en Recinto de Mayagüez</option>
-                <option value="uprrecinto">Universidad de Puerto Rico en Recinto de Ponce</option>
-                <option value="uprrecinto">Universidad de Puerto Rico en Recinto de Arecibo</option>
-                <option value="uprrecinto">Universidad de Puerto Rico en Recinto de Cayey</option>
-                <option value="uprrecinto">Universidad de Puerto Rico en Recinto de Utuado</option>
-                <option value="uprrecinto">Universidad de Puerto Rico en Recinto de Ponce</option>
-                <option value="uprrecinto">Universidad de Puerto Rico en Recinto de Aguadilla</option>
-                <option value="uprrecinto">Universidad de Puerto Rico en Recinto de Manatí</option>
-                <option value="uprrecinto">Universidad de Puerto Rico en Recinto de Bayamón</option>
+            <select name="college"
+                    id="college_filter"
+                    class="border border-gray-300 rounded-md p-2">
+                <option value="upr">
+                    Universidad de Puerto Rico
+                </option>
+                <option value="uprm">
+                    Universidad de Puerto Rico en Mayagüez
+                </option>
+                <option value="uprrp">
+                    Universidad de Puerto Rico en Río Piedras
+                </option>
+                <option value="uprhumacao">
+                    Universidad de Puerto Rico en Humacao
+                </option>
+                <option value="uprcarolina">
+                    Universidad de Puerto Rico en Carolina
+                </option>
+                <option value="uprrecinto">
+                    Universidad de Puerto Rico en Recinto de Mayagüez
+                </option>
+                <option value="uprrecinto">
+                    Universidad de Puerto Rico en Recinto de Ponce
+                </option>
+                <option value="uprrecinto">
+                    Universidad de Puerto Rico en Recinto de Arecibo
+                </option>
+                <option value="uprrecinto">
+                    Universidad de Puerto Rico en Recinto de Cayey
+                </option>
+                <option value="uprrecinto">
+                    Universidad de Puerto Rico en Recinto de Utuado
+                </option>
+                <option value="uprrecinto">
+                    Universidad de Puerto Rico en Recinto de Ponce
+                </option>
+                <option value="uprrecinto">
+                    Universidad de Puerto Rico en Recinto de Aguadilla
+                </option>
+                <option value="uprrecinto">
+                    Universidad de Puerto Rico en Recinto de Manatí
+                </option>
+                <option value="uprrecinto">
+                    Universidad de Puerto Rico en Recinto de Bayamón
+                </option>
             </select>
         </div>
         <div class="flex flex-col md:justify-center md:items-center md:space-x-4">
             <label for="faculty" class="text-gray-700 font-bold">Facultad</label>
-            <select name="faculty" id="faculty" class="border border-gray-300 rounded-md p-2">
-                <option value="ciencias">Ciencias</option>
-                <option value="derecho">Derecho</option>
-                <option value="educacion">Educación</option>
-                <option value="humanidades">Humanidades</option>
-                <option value="ingenieria">Ingeniería</option>
-                <option value="medicina">Medicina</option>
-                <option value="nursing">Nursing</option>
-                <option value="psicologia">Psicología</option>
-                <option value="salud">Salud</option>
+            <select name="department"
+                    id="faculty_filter"
+                    class="border border-gray-300 rounded-md p-2">
+                <option value="ciencias">
+                    Ciencias
+                </option>
+                <option value="Naturales">
+                    Naturales
+                </option>
+                <option value="derecho">
+                    Derecho
+                </option>
+                <option value="educacion">
+                    Educación
+                </option>
+                <option value="humanidades">
+                    Humanidades
+                </option>
+                <option value="ingenieria">
+                    Ingeniería
+                </option>
+                <option value="medicina">
+                    Medicina
+                </option>
+                <option value="nursing">
+                    Nursing
+                </option>
+                <option value="psicologia">
+                    Psicología
+                </option>
+                <option value="salud">
+                    Salud
+                </option>
             </select>
         </div>
     </div>
@@ -40,12 +93,16 @@
     <div class="flex flex-col md:justify-center md:items-center md:space-x-4">
         <label for="search" class="text-gray-700 font-bold">Buscar</label>
         <div>
-            <input type="text" name="search" id="search" class="border border-gray-300 rounded-md p-2">
+            <input type="search"
+                   name="search"
+                   id="search-bar"
+                   class="border border-gray-300 rounded-md p-2">
         </div>
     </div>
     <!-- Link to add new professors -->
     <div class="flex flex-col md:justify-center md:items-center md:space-x-4">
         <label for="add" class="text-gray-700 font-bold">👨‍🏫</label>
-        <a href="/professors/add" class="bg-indigo-600 py-2 px-4 rounded-md text-white font-bold">+ profesor</a>
+        <a href="/professors/add"
+           class="bg-indigo-600 py-2 px-4 rounded-md text-white font-bold">+ profesor</a>
     </div>
 </section>
