--- a/professors/templates/professor_list.html
+++ b/professors/templates/professor_list.html
@@ -14,21 +14,30 @@
         <div class="container flex flex-col md:flex-row md:flex-wrap md:mx-auto md:items-center">
             <!-- Section title -->
             {% for professor in professors %}
-                    <div class="flex flex-col md:w-3/12 rounded-lg p-6 m-4 shadow-md border border-gray-200 md:hover:bg-gray-200 md:hover:animate-bounce">
-                        <a href="" class="space-y-2">
-                            <!-- header -->
-                            <div class="flex flex-row space-x-1 items-center md:text-2xl">
-                                <p class="font-bold text-gray-900">{{ professor.first_name }} {{ professor.last_name }}</p>
-                                <img src="{% static 'img/upr_logo.jpg' %}" alt="" class="w-5 h-5 rounded-full">
-                            </div>
-                            <!-- diving line -->
-                            <!-- body -->
-                            <div class="flex flex-col justify-start items-start md:text-md">
-                                <p><span class="font-bold text-gray-700">Universidad: </span> <span class="text-gray-600">{{ professor.college }}</span></p>
-                                <p><span class="font-bold text-gray-700">Facultad: </span> <span class="text-gray-600">{{ professor.faculty }}</span></p>
-                            </div>
-                        </a>
-                    </div>
+                <div class="flex professor flex-col md:w-3/12 rounded-lg p-6 m-4 shadow-md border border-gray-200 md:hover:bg-gray-200 md:hover:animate-bounce"
+                     data-college="{{ professor.college }}"
+                     data-faculty="{{ professor.faculty }}"
+                     data-name="{{ professor.first_name }} {{ professor.last_name }}">
+                    <a href="{{ professor.pk }}" class="space-y-2">
+                        <!-- header -->
+                        <div class="flex flex-row space-x-1 items-center md:text-2xl">
+                            <p class="font-bold text-gray-900">{{ professor.first_name }} {{ professor.last_name }}</p>
+                            <img src="{% static 'img/upr_logo.jpg' %}"
+                                 alt=""
+                                 class="w-5 h-5 rounded-full">
+                        </div>
+                        <!-- diving line -->
+                        <!-- body -->
+                        <div class="flex flex-col justify-start items-start md:text-md">
+                            <p>
+                                <span class="font-bold text-gray-700">Universidad:</span> <span class="text-gray-600">{{ professor.college }}</span>
+                            </p>
+                            <p>
+                                <span class="font-bold text-gray-700">Facultad:</span> <span class="text-gray-600">{{ professor.faculty }}</span>
+                            </p>
+                        </div>
+                    </a>
+                </div>
             {% endfor %}
         </div>
     </section>
