--- a/templates/base.html
+++ b/templates/base.html
@@ -21,5 +21,6 @@
         </div>
         {% include 'footer.html' %}
         <script src="{% static 'js/navbar.js' %}"></script>
+        <script src="{% static 'js/filter.js' %}"></script>
     </body>
 </html>
