--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
     <!-- Hero section -->
-    <section class="text-2xl">
+    <section class="text-xl md:text-2xl">
         <div class="container flex flex-col mx-auto justify-between md:py-20 w-full md:mt-8 md:flex-row">
             <div class="flex flex-col mx-auto justify-center p-3 md:p-0">
                 <!-- welcome message -->
@@ -27,8 +27,10 @@
                 </div>
                 <!-- call to action buttons -->
                 <div class="flex flex-row  items-center justify-center md:justify-start md:items-start mt-8">
-                    <a href="#" class="bg-indigo-600 text-white p-2 rounded-lg">Ver cursos</a>
-                    <a href="#" class="bg-indigo-600 text-white p-2 rounded-lg ml-4">Ver profesores</a>
+                    <a href="{% url 'professors:all_professors' %}"
+                       class="bg-indigo-600 text-white p-2 rounded-lg">Ver profesores</a>
+                    <a href="{% url 'courses:all_courses' %}"
+                       class="bg-indigo-600 text-white p-2 rounded-lg ml-4">Ver cursos</a>
                 </div>
             </div>
             <!-- hero image -->
@@ -44,33 +46,28 @@
     <section class="bg-gray-100 mt-4 md:text-2xl">
         <div class="container mx-auto py-20">
             <div class="flex flex-col items-center">
-                <h2 class="text-4xl font-bold text-indigo-600">¿Qué es University Hub?</h2>
+                <h2 class="text-2xl font-bold text-indigo-600 md:text-4xl">¿Qué es University Hub?</h2>
                 <p class="text-gray-600 text-center mt-4 px-4">
                     University Hub es una plataforma en la que puedes calificar a tus profesores en base a los cursos que has tomado con ellos. Además, puedes hacer y ver confesiones anónimas de otros estudiantes.
                 </p>
             </div>
-            <div class="flex flex-col mt-8 space-y-6 md:flex-row">
-                <!-- first card -->
-                <div class="flex flex-col items-center justify-center md:w-1/3">
+            <div class="flex flex-col mt-8 items-center justify-center md:space-x-6 md:flex-row">
+                <div class="flex flex-col-reverse items-center justify-center md:flex-col md:w-1/3">
                     <div class="flex flex-col items-center justify-center">
-                        <div class="flex items center justify-center rounded-full">
-                            <img src="{% static 'img/placeholder.png' %}"
-                                 alt="teacher"
-                                 class="w-12 h-12">
-                        </div>
+                        <img src="{% static 'img/sign-up-ss.png' %}"
+                             alt="teacher"
+                             class="rounded-lg">
                         <h3 class="text-2xl font-bold text-indigo-600 mt-4">Regístrate 📝</h3>
                         <p class="text-gray-600 text-center mt-4 px-4">
-                            Regístrate en la plataforma para poder calificar a tus profesores y ver las calificaciones de otros estudiantes.
+                            Regístrate en la plataforma para poder usar todas las funcionalidades de la misma.
                         </p>
                     </div>
                 </div>
                 <div class="flex flex-col items-center justify-center md:w-1/3">
                     <div class="flex flex-col items-center justify-center">
-                        <div class="flex items center justify-center rounded-full">
-                            <img src="{% static 'img/placeholder.png' %}"
-                                 alt="teacher"
-                                 class="w-12 h-12">
-                        </div>
+                        <img src="{% static 'img/sign-up-ss.png' %}"
+                             alt="teacher"
+                             class="rounded-lg">
                         <h3 class="text-2xl font-bold text-indigo-600 mt-4">Cursos y Profesores 👨‍🏫</h3>
                         <p class="text-gray-600 text-center mt-4 px-4">
                             Busca algún profesor o curso que te interese ver su calificación o que quieras calificar.
@@ -79,14 +76,12 @@
                 </div>
                 <div class="flex flex-col items-center justify-center md:w-1/3">
                     <div class="flex flex-col items-center justify-center">
-                        <div class="flex items center justify-center rounded-full">
-                            <img src="{% static 'img/placeholder.png' %}"
-                                 alt="teacher"
-                                 class="w-12 h-12">
-                        </div>
+                        <img src="{% static 'img/sign-up-ss.png' %}"
+                             alt="teacher"
+                             class="rounded-lg">
                         <h3 class="text-2xl font-bold text-indigo-600 mt-4">Confiésate ✝️</h3>
                         <p class="text-gray-600 text-center mt-4 px-4">
-                            Lee las confesiones de otros estudiantes, haz una confesión anónima o comenta en las confesiones de otros estudiantes.
+                            Lee las confesiones de otros estudiantes, haz una confesión anónima o comenta.
                         </p>
                     </div>
                 </div>
