fixed logo not aligned on mobile

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,12 +3,12 @@
     <nav>
         <div class="container flex flex-row mx-auto justify-between items-center my-4">
             <!-- logo section -->
-            <div class="flex flex-row items-center">
+            <div class="flex flex-row justify-center items-center">
                 <div>
                     <a href="{% url 'home:index' %}">
                         <img src="{% static 'img/logo.svg' %}"
                              alt="logo"
-                             class="logo dark:fill-white"/>
+                             class="mx-4 md:mx-0"/>
                     </a>
                 </div>
                 <div>
@@ -43,11 +43,7 @@
     </nav>
 {% else %}
     <nav>
-        <div class="container flex flex-row mx-auto justify-between items-center my-4"
-             --
-             logo
-             section
-             -->
+        <div class="container flex flex-row mx-auto justify-between items-center my-4">
             <div class="flex flex-row justify-center items-center">
                 <div>
                     <a href="{% url 'home:index' %}">
